# EFB

./: .env.example  .gitignore  CLAUDE.md  LOG.md  README.md  plan.md  pyproject.toml
evaluation/: __init__.py  answers.py  plot_results.py  summarize_results.py
generation/: __init__.py  degeneration.py  run_math500.py  selection.py
sampling/: __init__.py  backend.py  criticality.py  hf_backend.py  metrics.py  power.py  toy_validation.py
tests/: test_answers.py  test_criticality.py  test_degeneration.py  test_power_sampling.py  test_selection.py  test_summarize_results.py  test_toy_validation.py
